--- a/app/views/base.html
+++ b/app/views/base.html
@@ -7,7 +7,7 @@
 
     <title>
       {% block title %}
-        Tietokantasovellus
+        Vituttaako.com
       {% endblock %}
     </title>
 
@@ -33,13 +33,19 @@
             <span class="icon-bar"></span>
           </button>
           <!-- Sovelluksen nimi -->
-          <a class="navbar-brand" href="{{base_path}}">Tsoha Bootstrap</a>
+          <a class="navbar-brand" href="{{base_path}}">Vituttaako.com</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
           <ul class="nav navbar-nav">
             <!-- Navigaation linkit -->
             <li><a href="{{base_path}}">Etusivu</a></li>
+            <li><a href="{{base_path}}/selaa">Selaa</a></li>
+            <li><a href="{{base_path}}/topten">Top 10</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="{{base_path}}/rekisteroidy"><span class="glyphicon glyphicon-user"></span> Rekisteröidy</a></li>
+            <li><a href="{{base_path}}/kirjaudu"><span class="glyphicon glyphicon-log-in"></span> Kirjaudu</a></li>
           </ul>
         </div>
       </div>
