--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,11 +1,62 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <div class="page-header">
-    <h1>Tervetuloa Tsoha Bootstrappiin!</h1>
+  <div class="page-header text-center">
+    <h1>Vituttaako.com!</h1>
+    <p>Vituttaako.com on verkkosivu, jolla voit kertoa mikä mieltäsi painaa. Jaa asiat jotka sinua eniten nyppivät, nyt täysin anonyymisti!</p>
   </div>
 
-  <p>
-    <a href="http://tsoha.github.io" class="btn btn-primary btn-lg">Tutustu materiaaliin <span class="glyphicon glyphicon-chevron-right"></span></a>
-  </p>
+    <form class="share-story">
+    <div class="form-group">
+      <label for="comment">Mieltäni painaa:</label>
+      <textarea class="form-control" rows="15" id="comment"></textarea>
+    </div>
+    <button class="btn btn-success btn-large send-button col-md-offset-3">Lähetä</button>
+  </form>
+
+  <div class="col-md-6">
+   <h2 class="text-center">Uusimmat</h2>
+
+   <table class="table table-striped">
+     <thead>
+       <tr>
+         <th>Käyttäjä</th>
+         <th>Tarina</th>
+       </tr>
+     </thead>
+     <tbody>
+       <tr>
+         <td>Seppo</td>
+         <td>Kävin paskalla ja vessapaperi loppui! Ai että kun pistää vihaksi.</td>
+       </tr>
+       <tr>
+         <td>Anonyymi</td>
+         <td>Olin juuri menossa bussiin, ensinnäkin matkakortista oli loppunut aika ja sen lisäksi lompakkoni levisi lattialle... Lue lisää</td>
+       </tr>
+     </tbody>
+   </table>
+
+  </div>
+
+  <div class="col-md-6">
+    <h2 class="text-center">Parhaimmat</h2>
+    <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Käyttäjä</th>
+        <th>Tarina</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Seppo</td>
+        <td>Kävin paskalla ja vessapaperi loppui! Ai että kun pistää vihaksi.</td>
+      </tr>
+      <tr>
+        <td>Anonyymi</td>
+        <td>Olin juuri menossa bussiin, ensinnäkin matkakortista oli loppunut aika ja sen lisäksi lompakkoni levisi lattialle... Lue lisää</td>
+      </tr>
+    </tbody>
+  </table>
+  </div>
 {% endblock %}
