--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -8,3 +8,38 @@
   max-width: 1200px;
   margin: 0px auto;
 }
+
+.send-button {
+  width: 50%;
+  border: 3px solid green;
+  padding: 20px;
+}
+
+.share-story {
+  margin-bottom: 50px;
+}
+
+.badgebox
+{
+  opacity: 0;
+}
+
+.badgebox + .badge
+{
+  text-indent: -999999px;
+	width: 27px;
+}
+
+.badgebox:focus + .badge
+{
+  box-shadow: inset 0px 0px 5px;
+}
+
+.badgebox:checked + .badge
+{
+	text-indent: 0;
+}
+
+.btn-margin {
+  margin-right:5px;
+}
