--- a/app/views/stories.html
+++ b/app/views/stories.html
@@ -53,10 +53,16 @@
 </thead>
 <tbody>
   {% for story in stories %}
-  <tr>
+  <tr><a href="{{base_path}}/tarina/{{story.id}}">
     <td>{{story.createdby}}</td>
     <td>{{story.story}}</td>
-    <td><button class="btn btn-success btn-margin">Vituttaa</button><button class="btn btn-warning">Älä valita</button></td>
+    <td>
+      <a href="{{base_path}}/tarina/{{story.id}}">
+        <button class="btn btn-info btn-margin">Kommentoi</button>
+      </a>
+        <button class="btn btn-success btn-margin">Vituttaa!</button>
+        <button class="btn btn-danger">Älä valita!</button>
+    </td>
   </tr>
   {% endfor %}
 </tbody>
