--- a/app/views/story.html
+++ b/app/views/story.html
@@ -23,11 +23,11 @@
 </table>
 
 <h2>Kommentoi</h2>
-<form>
+<form method="post" action="{{base_path}}/tallennakommentti">
 <div class="form-group">
-  <textarea class="form-control" rows="5" id="comment"></textarea>
+  <textarea class="form-control" rows="5" name="comment" id="comment"></textarea>
 </div>
-<button class="btn btn-success">Lähetä</button>
+<button class="btn btn-success" type="submit">Lähetä</button>
 </form>
 <br>
 <h2>Kommentit</h2>
