--- a/app/views/base.html
+++ b/app/views/base.html
@@ -42,6 +42,7 @@
             <li><a href="{{base_path}}">Etusivu</a></li>
             <li><a href="{{base_path}}/selaa">Selaa</a></li>
             <li><a href="{{base_path}}/topten">Top 10</a></li>
+            <li><a href="{{base_path}}/omat">Omat tarinat</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="{{base_path}}/rekisteroidy"><span class="glyphicon glyphicon-user"></span> Rekisteröidy</a></li>
