--- a/app/views/rekisteroidy.html
+++ b/app/views/rekisteroidy.html
@@ -4,7 +4,7 @@
 <h1>Rekisteröidy</h1>
 <p>Rekisteröitymällä palveluumme saat hurjasti lisää ominaisuuksia! Voit esimerkiksi muokata ja poistaa lähettämiäsi tarinoita.</p>
 
-			    		<form role="form">
+			    		<form role="form" method="post" action="{{base_path}}/register">
                 <div class="form-group">
 			    				<input type="text" name="username" id="username" class="form-control" placeholder="Käyttäjänimi">
 			    			</div>
