--- a/app/views/kirjaudu.html
+++ b/app/views/kirjaudu.html
@@ -4,6 +4,15 @@
 <h1>Kirjaudu sisään</h1>
 <p>Etkö ole vielä käyttäjä? Rekisteröidy <a href="{{base_path}}/rekisteroidy">täällä</a></p>
 
+{% if user_logged_in %}
+  <h1>Käyttäjän
+    {% for user in user_logged_in %}
+    {{user.username}}
+      {% endfor %}
+  </h1>
+{% endif %}
+<br><br>
+
   <form method="post" action="{{base_path}}/login">
       <div class="form-group">
           <label for="username-email">Käyttäjänimi</label>
