restriction and user info

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -45,8 +45,14 @@
             <li><a href="{{base_path}}/omat">Omat tarinat</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
+            {% if user_logged_in %}
+                <li><a href="">Kirjautunut: {{user_logged_in.username}}</a></li>
+                <li><a href="">Kirjaudu ulos</a></li>
+            {% endif %}
+            {% if not user_logged_in %}
             <li><a href="{{base_path}}/rekisteroidy"><span class="glyphicon glyphicon-user"></span> Rekisteröidy</a></li>
             <li><a href="{{base_path}}/kirjaudu"><span class="glyphicon glyphicon-log-in"></span> Kirjaudu</a></li>
+            {% endif %}
           </ul>
         </div>
       </div>
