--- a/app/views/base.html
+++ b/app/views/base.html
@@ -44,16 +44,20 @@
             <li><a href="{{base_path}}/topten">Top 10</a></li>
             <li><a href="{{base_path}}/omat">Omat tarinat</a></li>
           </ul>
+
+          {% if user_logged_in %}
           <ul class="nav navbar-nav navbar-right">
-            {% if user_logged_in %}
-                <li><a href="">Kirjautunut: {{user_logged_in.username}}</a></li>
-                <li><a href="">Kirjaudu ulos</a></li>
-            {% endif %}
-            {% if not user_logged_in %}
-            <li><a href="{{base_path}}/rekisteroidy"><span class="glyphicon glyphicon-user"></span> Rekisteröidy</a></li>
-            <li><a href="{{base_path}}/kirjaudu"><span class="glyphicon glyphicon-log-in"></span> Kirjaudu</a></li>
-            {% endif %}
-          </ul>
+            <li><a href="">Kirjautunut: {{user_logged_in.username}}</a></li>
+           <form class="navbar-form navbar-right" method="post" action="{{base_path}}/logout">
+             <button type="submit" class="btn btn-default">Kirjaudu ulos</button>
+           </form>
+         {% else %}
+           <ul class="nav navbar-nav navbar-right">
+             <li><a href="{{base_path}}/rekisteroidy"><span class="glyphicon glyphicon-user"></span> Rekisteröidy</a></li>
+             <li><a href="{{base_path}}/kirjaudu"><span class="glyphicon glyphicon-log-in"></span> Kirjaudu</a></li>
+           </ul>
+         {% endif %}
+
         </div>
       </div>
     </nav>
