--- a/app/views/base.html
+++ b/app/views/base.html
@@ -42,7 +42,9 @@
             <li><a href="{{base_path}}">Etusivu</a></li>
             <li><a href="{{base_path}}/selaa">Selaa</a></li>
             <li><a href="{{base_path}}/topten">Top 10</a></li>
+            {% if user_logged_in %}
             <li><a href="{{base_path}}/omat">Omat tarinat</a></li>
+            {% endif %}
           </ul>
 
           {% if user_logged_in %}
