--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,10 +6,28 @@
     <p>Vituttaako.com on verkkosivu, jolla voit kertoa mikä mieltäsi painaa. Jaa asiat jotka sinua eniten nyppivät, nyt täysin anonyymisti!</p>
   </div>
 
+  {% if messages %}
+  <div class="alert alert-warning">
+    <strong>Varoitus!</strong>
+     {% for message in messages %}
+      {{message}}
+     {% endfor %}
+  </div>
+  {% endif %}
+
     <form class="share-story" method="post" action="{{base_path}}/tallennatarina">
     <div class="form-group">
       <label for="comment">Mieltäni painaa:</label>
       <textarea class="form-control" rows="15" id="story" name="story"></textarea>
+    </div>
+    <div class="form-group">
+      <label for="sel1">Kategoria</label>
+      <select class="form-control" id="sel1">
+        <option>Vitutus</option>
+        <option>Masennus</option>
+        <option>Fuck everything</option>
+        <option>Nojoo</option>
+      </select>
     </div>
     <button class="btn btn-success btn-large send-button col-md-offset-3" type="submit">Lähetä</button>
   </form>
