--- a/app/views/story.html
+++ b/app/views/story.html
@@ -1,6 +1,23 @@
 {% extends "base.html" %}
-
 {% block content %}
+
+
+{% if messages %}
+<div class="alert alert-warning">
+  <strong>Varoitus!</strong>
+   {% for message in messages %}
+    {{message}}
+   {% endfor %}
+</div>
+{% endif %}
+
+{% if comment %}
+<div class="alert alert-success">
+  <strong>Onnistui!</strong>
+    {{message}}
+</div>
+{% endif %}
+
 <table class="table table-striped">
 <thead>
   <tr>
