--- a/app/views/rekisteroidy.html
+++ b/app/views/rekisteroidy.html
@@ -6,22 +6,22 @@
 
 			    		<form role="form" method="post" action="{{base_path}}/register">
                 <div class="form-group">
-			    				<input type="text" name="username" id="username" class="form-control" placeholder="Käyttäjänimi">
+			    				<input type="text" name="username" id="username" class="form-control" placeholder="Käyttäjänimi" required>
 			    			</div>
 
 			    			<div class="form-group">
-			    				<input type="email" name="email" id="email" class="form-control" placeholder="Sähköposti">
+			    				<input type="email" name="email" id="email" class="form-control" placeholder="Sähköposti" required>
 			    			</div>
 
 			    			<div class="row">
 			    				<div class="col-xs-6 col-sm-6 col-md-6">
 			    					<div class="form-group">
-			    						<input type="password" name="password" id="password" class="form-control" placeholder="Salasana">
+			    						<input type="password" name="password" id="password" class="form-control" placeholder="Salasana" required>
 			    					</div>
 			    				</div>
 			    				<div class="col-xs-6 col-sm-6 col-md-6">
 			    					<div class="form-group">
-			    						<input type="password" name="password_confirmation" id="password_confirmation" class="form-control" placeholder="Vahvista salasana">
+			    						<input type="password" name="password_confirmation" id="password_confirmation" class="form-control" placeholder="Vahvista salasana" required>
 			    					</div>
 			    				</div>
 			    			</div>
