error message for category

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -15,6 +15,13 @@
   </div>
   {% endif %}
 
+  {% if message %}
+  <div class="alert alert-warning">
+    <strong>Varoitus!</strong>
+      {{message}}
+  </div>
+  {% endif %}
+
     <form class="share-story" method="post" action="{{base_path}}/tallennatarina">
     <div class="form-group">
       <label for="comment">Mieltäni painaa:</label>
