--- a/app/views/stories.html
+++ b/app/views/stories.html
@@ -13,35 +13,15 @@
 </div>
 <br>
 <div class="text-center">
-  <label for="best-stories" class="btn btn-info">Parhaimmat <input type="checkbox" id="best-stories" class="badgebox"><span class="badge">&check;</span></label>
-  <label for="worst-stories" class="btn btn-info">Huonoimmat <input type="checkbox" id="worst-stories" class="badgebox"><span class="badge">&check;</span></label>
-  <label for="newest-stories" class="btn btn-info">Uusimmat <input type="checkbox" id="newest-stories" class="badgebox"><span class="badge">&check;</span></label>
-  <label for="oldest-stories" class="btn btn-info">Vanhimmat <input type="checkbox" id="oldest-stories" class="badgebox"><span class="badge">&check;</span></label>
+  <h2>Hae tarinat kategorioittain</h2>
+  <form class="share-story" method="post" action="{{base_path}}/editoitarinaa/{{story.id}}">
+  <button class="btn btn-info">Vitutus</button>
+  <button class="btn btn-info">Masennus</button>
+  <button class="btn btn-info">Fuck Everything</button>
+  <button class="btn btn-info">Antaa olla</button>
+  </form>
 </div>
 
-<div class="text-center">
-<nav aria-label="Page navigation">
-  <ul class="pagination">
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-        <span class="sr-only">Previous</span>
-      </a>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">4</a></li>
-    <li class="page-item"><a class="page-link" href="#">5</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-        <span class="sr-only">Next</span>
-      </a>
-    </li>
-  </ul>
-</nav>
-</div>
 
 <table class="table table-striped">
 <thead>
