--- a/app/views/stories.html
+++ b/app/views/stories.html
@@ -14,12 +14,10 @@
 <br>
 <div class="text-center">
   <h2>Hae tarinat kategorioittain</h2>
-  <form class="share-story" method="post" action="{{base_path}}/editoitarinaa/{{story.id}}">
-  <button class="btn btn-info">Vitutus</button>
-  <button class="btn btn-info">Masennus</button>
-  <button class="btn btn-info">Fuck Everything</button>
-  <button class="btn btn-info">Antaa olla</button>
-  </form>
+  <a href="{{base_path}}/selaa/1"><button class="btn btn-info">Vitutus</button></a>
+  <a href="{{base_path}}/selaa/2"><button class="btn btn-info">Masennus</button></a>
+  <a href="{{base_path}}/selaa/3"><button class="btn btn-info">Fuck Everything</button></a>
+  <a href="{{base_path}}/selaa/4"><button class="btn btn-info">Antaa olla</button></a>
 </div>
 
 
