SQL JOIN lololo

--- a/app/views/stories.html
+++ b/app/views/stories.html
@@ -14,6 +14,7 @@
 <br>
 <div class="text-center">
   <h2>Hae tarinat kategorioittain</h2>
+    <a href="{{base_path}}/selaa"><button class="btn btn-info">Kaikki</button></a>
   <a href="{{base_path}}/selaa/1"><button class="btn btn-info">Vitutus</button></a>
   <a href="{{base_path}}/selaa/2"><button class="btn btn-info">Masennus</button></a>
   <a href="{{base_path}}/selaa/3"><button class="btn btn-info">Fuck Everything</button></a>
