--- a/app/views/stories.html
+++ b/app/views/stories.html
@@ -1,16 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
+<form class="share-story" method="post" action="{{base_path}}/etsitarinaa">
 <div id="custom-search-input">
     <div class="input-group col-md-12">
-        <input type="text" class="form-control input-lg" placeholder="Etsi tarinaa vapaasti" />
+        <input type="text" class="form-control input-lg" placeholder="Etsi tarinaa vapaasti" name="tarina" />
         <span class="input-group-btn">
-            <button class="btn btn-info btn-lg" type="button">
+            <button class="btn btn-info btn-lg" type="submit">
                 <i class="glyphicon glyphicon-search"></i>
             </button>
         </span>
     </div>
 </div>
+</form>
+
 <br>
 <div class="text-center">
   <h2>Hae tarinat kategorioittain</h2>
